update db references

--- a/views/components/post-item-template.jade
+++ b/views/components/post-item-template.jade
@@ -1,6 +1,6 @@
 script#post-item(type="text/template").
     <div class="list-group-item rounded-0 d-flex p-3">
-        <div><img class="user-avatar-40 user-avatar" src=""></div>
+        <div><img class="user-avatar-40 user-avatar rounded-circle" src=""></div>
         <div class="ml-2">
             <b class="post-user-name"></b>
             <span class="text-muted d-inline-block mx-2 post-user-alias"></span>
