some colors and screen fixes

--- a/views/components/navbar.jade
+++ b/views/components/navbar.jade
@@ -1,5 +1,5 @@
 nav.site-navigation.bg-white
-    - var menu = { 'feed' : { url : '/feed', icon: { normal: 'far fa-comments icon', active: 'fas fa-comments icon', } }, 'notifications' : { url : '/notifications', icon: { normal: 'far fa-bell icon', active: 'fas fa-bell icon', } }, 'direct' : { url : '/who-to-follow', icon: { normal: 'far fa-bookmark icon', active: 'fas fa-bookmark icon', } } }
+    - var menu = { 'feed' : { url : '/feed', icon: { normal: 'far fa-comments icon', active: 'fas fa-comments icon', } }, 'notifications' : { url : '/notifications', icon: { normal: 'far fa-bell icon', active: 'fas fa-bell icon', } }, 'suggestions' : { url : '/who-to-follow', icon: { normal: 'far fa-bookmark icon', active: 'fas fa-bookmark icon', } } }
     .container.h-100
         .row.h-100
             .col-lg-10.mx-auto
