--- a/views/components/user-menu.jade
+++ b/views/components/user-menu.jade
@@ -15,13 +15,13 @@
         a.list-group-item.list-group-item-action.border-top-0.border-bottom-0(href="/profile/#{user.id}")
             i.far.fa-user 
             span.d-inline-block.ml-2 Perfil
-        a.list-group-item.list-group-item-action.border-top-0.border-bottom-0(href="#")
+        a.list-group-item.list-group-item-action.border-top-0.border-bottom-0(href="/notifications")
             i.far.fa-bell
             span.d-inline-block.ml-2 Notificações
         //- a.list-group-item.list-group-item-action.border-top-0(href="#")
         //-     i.far.fa-envelope
         //-     span.d-inline-block.ml-2 Mensagens
-        a.list-group-item.list-group-item-action.border-top-0(href="#")
+        a.list-group-item.list-group-item-action.border-top-0(href="/who-to-follow")
             i.far.fa-bookmark
             span.d-inline-block.ml-2 Quem seguir
         a.list-group-item.list-group-item-action.text-right(href="/logout")
