--- a/views/password-recover.jade
+++ b/views/password-recover.jade
@@ -5,7 +5,7 @@ block content
     .row.h-100
         .col.bg-light.order-md-2.d-flex.align-items-center.justify-content-center
             div.col-sm-8.col-md-5.col-lg-4.py-3.text-center
-                h1.text-info.mb-4.mb-md-5
+                h1.text-primary.mb-4.mb-md-5
                     span.fas.fa-crow
                     span.sr-only= title
 
@@ -18,7 +18,7 @@ block content
                             label.sr-only(for="email") Email
                             input.form-control(type="email", name="email", placeholder="Email", id="email", data-validator="email")
                         div.mb-5.text-right
-                            button.btn.btn-info.btn-block(type="submit", data-loading="Aguarde..." data-text="Recuperar Senha") Recuperar Senha
+                            button.btn.btn-primary.btn-block(type="submit", data-loading="Aguarde..." data-text="Recuperar Senha") Recuperar Senha
 
                         .text-center 
                             a(href="/") &larr; Voltar para login
