--- a/views/who-to-follow.jade
+++ b/views/who-to-follow.jade
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+  - var active = 'suggestions';
   include ./components/navbar
   main.container.h-100.content-wrapper
     .row.h-100
