--- a/views/signup.jade
+++ b/views/signup.jade
@@ -5,7 +5,7 @@ block content
     .row.h-100
         .col.bg-light.order-md-2.d-flex.align-items-center.justify-content-center
             div.col-sm-8.col-md-5.col-lg-4.py-3.text-center
-                h1.text-info.mb-4.mb-md-5
+                h1.text-primary.mb-4.mb-md-5
                     span.fas.fa-crow
                     span.sr-only= title
 
@@ -26,7 +26,7 @@ block content
                             label.sr-only(for="password_conf") Confirma a Senha
                             input.form-control(type="password", name="password_conf", placeholder="Repita a Senha", id="password_conf", value="#{data.password_conf}", data-validator="equals", data-selector="#password")
                         div.mb-5.text-right
-                            button.btn.btn-info.btn-block(type="submit", data-loading="Aguarde..." data-text="Cadastrar") Cadastrar
+                            button.btn.btn-primary.btn-block(type="submit", data-loading="Aguarde..." data-text="Cadastrar") Cadastrar
 
                         .text-center 
                             a(href="/") &larr; Voltar para login
