Switch from Jade to Pug, update deprecated function calls

--- a/views/components/modal-edit-profile.pug
+++ b/views/components/modal-edit-profile.pug
@@ -6,13 +6,13 @@
         button.close(type='button', data-dismiss='modal', aria-label='Close')
           span(aria-hidden='true') ×
       .card#profile-cover-container.border-0.rounded-0.position-relative.card-image-area
-        img.card-img-top.rounded-0(src="/images/covers/#{user.cover}")
+        img.card-img-top.rounded-0(src=`/images/covers/${user.cover}`)
         div.select-file.text-center.d-flex.align-items-center.justify-content-center(role="button")
           i.fas.fa-camera
           input.file(type="file", name="capa", data-img-target="#input-profile-cover", data-img-container="#profile-cover-container")
       .modal-body
         .user-avatar.position-relative#profile-avatar-container
-          img(src="/images/avatars/#{user.avatar}", class="img-fluid")
+          img(src=`/images/avatars/${user.avatar}`, class="img-fluid")
           div.select-file.text-center.d-flex.align-items-center.justify-content-center(role="button")
             i.fas.fa-camera
             input.file(type="file", name="avatar", data-img-target="#input-profile-avatar", data-img-container="#profile-avatar-container")
@@ -20,10 +20,10 @@
         .input-group.mb-3
           .input-group-prepend
             span.input-group-text @
-          input#txtusername.form-control(type="text", value="#{user.username}")
+          input#txtusername.form-control(type="text", value=user.username)
         .form-group
           label(for="txtname") Nome
-          input#txtname.form-control(type="text", value="#{user.name}")
+          input#txtname.form-control(type="text", value=user.name)
         .form-group
           label(for="txtbio") Bio
           textarea#txtbio.form-control= profile.bio
