--- a/views/components/post-area.pug
+++ b/views/components/post-area.pug
@@ -1,5 +1,5 @@
 a.post-area.d-flex.align-items-center.border.shadow-sm.bg-white.p-3(role="button", href="#", data-toggle="modal", data-target="#post-modal")
-    img.user-avatar-40.rounded-circle(src="/images/avatars/#{user.avatar}")
+    img.user-avatar-40.rounded-circle(src=`/images/avatars/${user.avatar}`)
     span.d-inline-block.ml-3.text-secondary No que você está pensando?
     span.h3.ml-auto.mb-0.mr-1
         i.far.fa-file-image
