--- a/views/components/profile-header.pug
+++ b/views/components/profile-header.pug
@@ -1,18 +1,18 @@
 .card.profile-header.mt-0.mt-md-4.mt-lg-0
     div.card-image-area.bg-secondary.text-center
-        img.card-img-top.mx-auto(src="/images/covers/#{profile.cover}")
+        img.card-img-top.mx-auto(src=`/images/covers/${profile.cover}`)
     .card-body
         div.position-absolute.text-right.pr-3(style="width:100%; left: 0")
             if (isUserOwnerProfile)
                 button.btn.btn-pill.btn-outline-primary.px-3.d-inline-block.font-weight-bold(type="button", data-toggle="modal", data-target="#modal-edit-profile", data-backdrop="static", data-keyboard="false") Editar Perfil
             else
                 if (isFollowedByMe)
-                    button.btn-follow.btn.btn-primary.btn-pill.font-weight-bold.px-3(type="button" data-user_id="#{profile.id}", data-action="unfollow", data-follow="Seguindo", data-unfollow="Seguir") Seguindo
+                    button.btn-follow.btn.btn-primary.btn-pill.font-weight-bold.px-3(type="button" data-user_id=profile.id, data-action="unfollow", data-follow="Seguindo", data-unfollow="Seguir") Seguindo
                 else
-                    button.btn-follow.btn.btn-outline-primary.btn-pill.font-weight-bold.px-3(type="button" data-user_id="#{profile.id}", data-action="follow", data-follow="Seguindo", data-unfollow="Seguir") Seguir
+                    button.btn-follow.btn.btn-outline-primary.btn-pill.font-weight-bold.px-3(type="button" data-user_id=profile.id, data-action="follow", data-follow="Seguindo", data-unfollow="Seguir") Seguir
         div
             .user-avatar
-                img(src="/images/avatars/#{profile.avatar}", class="img-fluid")
+                img(src=`/images/avatars/${profile.avatar}`, class="img-fluid")
             h5.font-weight-bold.mb-0.mt-3 #{profile.name}
             div.text-muted @#{profile.username}
             p.my-2 #{profile.bio}
