Switch from Jade to Pug, update deprecated function calls

--- a/views/error500.pug
+++ b/views/error500.pug
@@ -8,11 +8,11 @@ html(lang="en")
         link(rel='stylesheet',href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css', integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO', crossorigin='anonymous')
         link(rel='stylesheet', href='/stylesheets/style.css')
 
-        title Erro  | Pardal  
+        title Erro  | Parrot  
     body.auth
         div.d-flex.h-100.align-items-center.justify-content-center
             div.error-block.text-center
                 p.text-center.h1.text-uppercase.text-muted.error-title 500
-                p.text-center Opass.. Alguma coisa saiu errado.
+                p.text-center Opss.. Alguma coisa saiu errado.
                 p.text-center.text-muted.mt-0.mt-4
                     a.btn.btn-primary.btn-pill.font-weight-bold.d-inline-block.px-4(href="/") voltar para home
