--- a/views/password-recover.pug
+++ b/views/password-recover.pug
@@ -9,7 +9,7 @@ block content
                     span.fas.fa-crow
                     span.sr-only= title
 
-                include ./components/alert.jade
+                include ./components/alert.pug
                 
                 form(action="/password-recover", method="post", data-invalid="true", novalidate)
                     fieldset
