--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,8 +11,8 @@ html(lang="en")
     link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.2.0/css/fontawesome.css', integrity='sha384-HbmWTHay9psM8qyzEKPc8odH4DsOuzdejtnr+OFtDmOcIVnhgReQ4GZBH7uwcjf6', crossorigin='anonymous')
     link(rel='stylesheet',href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css', integrity='sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO', crossorigin='anonymous')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body(class="#{bodyClass}")
-      - var app_name = 'Parrot';
+  body(class=bodyClass)
+    - var app_name = 'Parrot';
     block content
       - var active = 'feed';
     include ./components/post-item-template
