--- a/views/who-to-follow.pug
+++ b/views/who-to-follow.pug
@@ -12,24 +12,24 @@ block content
                     div.list-group-item.rounded-0
                         h5.mb-0 Sugestões
                     for user in content
-                        .list-group-item.list-group-item-action.cursor-pointer(data-navigate="/profile/#{user.id}")
+                        .list-group-item.list-group-item-action.cursor-pointer(data-navigate=`/profile/${user.id}`)
                             div.d-flex.align-items-center
-                                img.user-avatar-50.avatar-popover.rounded-circle(src="/images/avatars/#{user.avatar}")
+                                img.user-avatar-50.avatar-popover.rounded-circle(src=`/images/avatars/${user.avatar}`)
 
                                 div.ml-2
                                     b.d-block.person-name #{user.name}
                                     span.text-muted @#{user.username}
                                 div.ml-auto
-                                    button.btn-follow.btn.btn-outline-primary.btn-sm.btn-pill.font-weight-bold.px-3(type="button" data-user_id="#{user.id}", data-action="follow", data-follow="Seguindo", data-unfollow="Seguir") Seguir
+                                    button.btn-follow.btn.btn-outline-primary.btn-sm.btn-pill.font-weight-bold.px-3(type="button" data-user_id=user.id, data-action="follow", data-follow="Seguindo", data-unfollow="Seguir") Seguir
 
                             div.mt-1(style="padding-left: 60px; line-height: 1.3rem;")
                                 div  #{user.bio}
                                 div.mt-2
                                     b.d-inline-block.mr-2 #{user.following_count}
-                                    a.text-muted(href="/users/#{user.id}/following") Seguindo
+                                    a.text-muted(href=`/users/${user.id}/following`) Seguindo
                                     
                                     b.d-inline-block.ml-3.mr-1 #{user.followers_count}
-                                    a.text-muted(href="/users/#{user.id}/followers") Seguidores
+                                    a.text-muted(href=`/users/${user.id}/followers`) Seguidores
             .col-lg-5
                 include ./components/who-to-follow
 
